--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="css/vendor/normalize.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<link rel="stylesheet" type="text/css" href="js/components/navbar/navbar.css">
+	<link rel="stylesheet" type="text/css" href="js/components/pages/add-card-type/addcardtype.css">
 
 </head>
 <body>
