Added feature: view unopened card packs + basic page structure

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
 	<link rel="stylesheet" type="text/css" href="css/vendor/normalize.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<link rel="stylesheet" type="text/css" href="js/components/navbar/navbar.css">
+	<link rel="stylesheet" type="text/css" href="js/components/pages/open-packs/OpenPacks.css">
+	<link rel="stylesheet" type="text/css" href="js/components/pages/open-packs/card-pack/CardPack.css">
 
 </head>
 <body>
@@ -23,6 +25,7 @@
 	<script src="js/components/pages/add-card-type/AddCardType.js"></script>
 	<script src="js/components/pages/card-types/CardTypes.js"></script>
 	<script src="js/components/pages/open-packs/OpenPacks.js"></script>
+	<script src="js/components/pages/open-packs/card-pack/CardPack.js"></script>
 
 	<script src="js/services/router/Router.js"></script>
 	<script src="js/main.js"></script>
