Added event listeners and prepared the card object to be POSTed in the DB

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
 	<div class="content-container">
 	</div>
 
+	<script src="js/repositories/CardTypeRepository.js"></script>
 	<script src="js/repositories/UserRepository.js"></script>
 
 	<script src="js/components/navbar/Navbar.js"></script>
