--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 <html>
 <head>
 
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="css/vendor/normalize.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<link rel="stylesheet" type="text/css" href="js/components/navbar/navbar.css">
