--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,8 @@
 	<link rel="stylesheet" type="text/css" href="js/components/navbar/navbar.css">
 	<link rel="stylesheet" type="text/css" href="js/components/pages/open-packs/OpenPacks.css">
 	<link rel="stylesheet" type="text/css" href="js/components/pages/open-packs/card-pack/CardPack.css">
+	<link rel="stylesheet" type="text/css" href="js/components/pages/open-packs/card-component/Card.css">
+	<link rel="stylesheet" type="text/css" href="js/components/pages/open-packs/show-cards-modal/ShowCardsModal.css">
 
 </head>
 <body>
@@ -18,6 +20,7 @@
 	</div>
 
 	<script src="js/repositories/UserRepository.js"></script>
+	<script src="js/repositories/CardRepository.js"></script>
 
 	<script src="js/components/navbar/Navbar.js"></script>
 
@@ -26,6 +29,8 @@
 	<script src="js/components/pages/card-types/CardTypes.js"></script>
 	<script src="js/components/pages/open-packs/OpenPacks.js"></script>
 	<script src="js/components/pages/open-packs/card-pack/CardPack.js"></script>
+	<script src="js/components/pages/open-packs/show-cards-modal/ShowCardsModal.js"></script>
+	<script src="js/components/pages/open-packs/card-component/Card.js"></script>
 
 	<script src="js/services/router/Router.js"></script>
 	<script src="js/main.js"></script>
