--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,7 @@
 	</div>
 
 	<script src="js/repositories/UserRepository.js"></script>
+	<script src="js/repositories/CardTypesRepository.js"></script>
 
 	<script src="js/components/navbar/Navbar.js"></script>
 
