--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,9 @@
 	<script src="js/repositories/CardTypeRepository.js"></script>
 	<script src="js/repositories/UserRepository.js"></script>
 
+	<script src="js/components/html-elements/HtmlElements.js"></script>
 	<script src="js/components/navbar/Navbar.js"></script>
+	<script src="js/components/validations/CardValidations.js"></script>
 
 	<script src="js/components/pages/dashboard/Dashboard.js"></script>
 	<script src="js/components/pages/add-card-type/AddCardType.js"></script>
