Added animations for pack opening + Refactoring

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,8 @@
 	<link rel="stylesheet" type="text/css" href="js/components/pages/open-packs/card-component/Card.css">
 	<link rel="stylesheet" type="text/css" href="js/components/pages/open-packs/show-cards-modal/ShowCardsModal.css">
 
+	<link href='https://fonts.googleapis.com/css?family=Aclonica' rel='stylesheet'>
+
 </head>
 <body>
 
