--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 <html>
 <head>
 
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="css/vendor/normalize.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<link rel="stylesheet" type="text/css" href="js/components/navbar/navbar.css">
@@ -19,7 +20,11 @@
 	<script src="js/repositories/CardTypeRepository.js"></script>
 	<script src="js/repositories/UserRepository.js"></script>
 
+	<script src="js/components/html-elements/HtmlElements.js"></script>
 	<script src="js/components/navbar/Navbar.js"></script>
+
+	<script src="js/components/validations/CardValidations.js"></script>
+	<script src="js/components/validations/ValidationMessages.js"></script>
 
 	<script src="js/components/pages/dashboard/Dashboard.js"></script>
 	<script src="js/components/pages/add-card-type/AddCardType.js"></script>
