--- a/src/index.html
+++ b/src/index.html
@@ -25,8 +25,10 @@
 	<script src="js/repositories/UserRepository.js"></script>
 	<script src="js/repositories/CardTypesRepository.js"></script>
 	<script src="js/repositories/CardRepository.js"></script>
+	<script src="js/repositories/GridRepository.js"></script>
 
 	<script src="js/components/navbar/Navbar.js"></script>
+	<script src="js/components/grid/Grid.js"></script>
 
 	<script src="js/components/pages/dashboard/Dashboard.js"></script>
 	<script src="js/components/pages/add-card-type/AddCardType.js"></script>
