--- a/src/index.html
+++ b/src/index.html
@@ -3,13 +3,15 @@
 <html>
 <head>
 
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="css/vendor/normalize.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<link rel="stylesheet" type="text/css" href="js/components/navbar/navbar.css">
 	<link rel="stylesheet" type="text/css" href="js/components/pages/card-types/card-types.css">
+	<link rel="stylesheet" type="text/css" href="js/components/pages/add-card-type/addcardtype.css">
 	<link rel="stylesheet" type="text/css" href="js/components/pages/open-packs/OpenPacks.css">
 	<link rel="stylesheet" type="text/css" href="js/components/pages/open-packs/card-pack/CardPack.css">
-	<link rel="stylesheet" type="text/css" href="js/components/pages/open-packs/card-component/Card.css">
+	<link rel="stylesheet" type="text/css" href="js/components/card-component/Card.css">
 	<link rel="stylesheet" type="text/css" href="js/components/pages/open-packs/show-cards-modal/ShowCardsModal.css">
 
 	<link href='https://fonts.googleapis.com/css?family=Aclonica' rel='stylesheet'>
@@ -22,13 +24,18 @@
 	<div class="content-container">
 	</div>
 
+	<script src="js/repositories/CardTypeRepository.js"></script>
 	<script src="js/repositories/UserRepository.js"></script>
 	<script src="js/repositories/CardTypesRepository.js"></script>
 	<script src="js/repositories/CardRepository.js"></script>
 	<script src="js/repositories/GridRepository.js"></script>
 
+	<script src="js/components/html-elements/HtmlElements.js"></script>
 	<script src="js/components/navbar/Navbar.js"></script>
 	<script src="js/components/grid/Grid.js"></script>
+
+	<script src="js/components/validations/CardValidations.js"></script>
+	<script src="js/components/validations/ValidationMessages.js"></script>
 
 	<script src="js/components/pages/dashboard/Dashboard.js"></script>
 	<script src="js/components/pages/add-card-type/AddCardType.js"></script>
@@ -36,7 +43,7 @@
 	<script src="js/components/pages/open-packs/OpenPacks.js"></script>
 	<script src="js/components/pages/open-packs/card-pack/CardPack.js"></script>
 	<script src="js/components/pages/open-packs/show-cards-modal/ShowCardsModal.js"></script>
-	<script src="js/components/pages/open-packs/card-component/Card.js"></script>
+	<script src="js/components/card-component/Card.js"></script>
 
 	<script src="js/services/router/Router.js"></script>
 	<script src="js/main.js"></script>
