--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,11 @@
 	<link rel="stylesheet" type="text/css" href="css/vendor/normalize.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<link rel="stylesheet" type="text/css" href="js/components/navbar/navbar.css">
+	<link rel="stylesheet" type="text/css" href="js/components/pages/dashboard/dashboard.css">
 	<link rel="stylesheet" type="text/css" href="js/components/pages/card-types/card-types.css">
 	<link rel="stylesheet" type="text/css" href="js/components/pages/add-card-type/addcardtype.css">
 	<link rel="stylesheet" type="text/css" href="js/components/pages/open-packs/OpenPacks.css">
+	<link rel="stylesheet" type="text/css" href="js/components/pages/play-game/play-game.css">
 	<link rel="stylesheet" type="text/css" href="js/components/pages/open-packs/card-pack/CardPack.css">
 	<link rel="stylesheet" type="text/css" href="js/components/card-component/Card.css">
 	<link rel="stylesheet" type="text/css" href="js/components/pages/open-packs/show-cards-modal/ShowCardsModal.css">
@@ -42,6 +44,8 @@
 	<script src="js/components/pages/open-packs/card-pack/CardPack.js"></script>
 	<script src="js/components/pages/open-packs/show-cards-modal/ShowCardsModal.js"></script>
 	<script src="js/components/card-component/Card.js"></script>
+	<script src="js/components/pages/play-game/Game.js"></script>
+	<script src="js/components/pages/play-game/Player.js"></script>
 
 	<script src="js/services/router/Router.js"></script>
 	<script src="js/main.js"></script>
