--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="css/vendor/normalize.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<link rel="stylesheet" type="text/css" href="js/components/navbar/navbar.css">
+	<link rel="stylesheet" type="text/css" href="js/components/grid/grid.css">
 	<link rel="stylesheet" type="text/css" href="js/components/pages/card-types/card-types.css">
 	<link rel="stylesheet" type="text/css" href="js/components/pages/add-card-type/addcardtype.css">
 	<link rel="stylesheet" type="text/css" href="js/components/pages/open-packs/OpenPacks.css">
@@ -46,6 +47,7 @@
 	<script src="js/components/pages/open-packs/OpenPacks.js"></script>
 	<script src="js/components/pages/open-packs/card-pack/CardPack.js"></script>
 	<script src="js/components/pages/open-packs/show-cards-modal/ShowCardsModal.js"></script>
+	<script src="js/components/grid/GridTest.js"></script>
 	<script src="js/components/card-component/Card.js"></script>
 
 	<script src="js/services/router/Router.js"></script>
