Functional page for viewing the decks

--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,7 @@
 	<script src="js/repositories/CardTypesRepository.js"></script>
 	<script src="js/repositories/CardRepository.js"></script>
 	<script src="js/repositories/GridRepository.js"></script>
+	<script src="js/repositories/DeckRepository.js"></script>
 
 	<script src="js/components/html-elements/HtmlElements.js"></script>
 	<script src="js/components/navbar/Navbar.js"></script>
