Base UI and containers  added

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" type="text/css" href="js/components/navbar/navbar.css">
 	<link rel="stylesheet" type="text/css" href="js/components/grid/grid.css">
 	<link rel="stylesheet" type="text/css" href="js/components/pages/card-types/card-types.css">
+	<link rel="stylesheet" type="text/css" href="js/components/pages/add-deck/add-deck.css">
 	<link rel="stylesheet" type="text/css" href="js/components/pages/add-card-type/addcardtype.css">
 	<link rel="stylesheet" type="text/css" href="js/components/pages/open-packs/OpenPacks.css">
 	<link rel="stylesheet" type="text/css" href="js/components/pages/open-packs/card-pack/CardPack.css">
@@ -35,9 +36,7 @@
 	<script src="js/components/html-elements/HtmlElements.js"></script>
 	<script src="js/components/navbar/Navbar.js"></script>
 	<script src="js/components/grid/Grid.js"></script>
-
-	<script src="js/components/validations/CardValidations.js"></script>
-	<script src="js/components/validations/ValidationMessages.js"></script>
+	<script src="js/components/card-component/Card.js"></script>
 
 	<script src="js/components/validations/CardValidations.js"></script>
 	<script src="js/components/validations/ValidationMessages.js"></script>
@@ -49,8 +48,8 @@
 	<script src="js/components/pages/open-packs/card-pack/CardPack.js"></script>
 	<script src="js/components/pages/open-packs/show-cards-modal/ShowCardsModal.js"></script>
 	<script src="js/components/pages/view-decks/ViewDecks.js"></script>
-	<script src="js/components/card-component/Card.js"></script>
-
+	<script src="js/components/pages/add-deck/AddDeck.js"></script>
+	
 	<script src="js/services/router/Router.js"></script>
 	<script src="js/main.js"></script>
 
