--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
 	<link rel="stylesheet" type="text/css" href="js/components/pages/open-packs/card-pack/CardPack.css">
 	<link rel="stylesheet" type="text/css" href="js/components/card-component/Card.css">
 	<link rel="stylesheet" type="text/css" href="js/components/pages/open-packs/show-cards-modal/ShowCardsModal.css">
+	<link rel="stylesheet" type="text/css" href="js/components/pages/card-collection/cardcollection.css">
 
 	<link href='https://fonts.googleapis.com/css?family=Aclonica' rel='stylesheet'>
 
@@ -24,6 +25,7 @@
 	<div class="content-container">
 	</div>
 
+	<script src="js/repositories/CardCollectionRepository.js"></script>
 	<script src="js/repositories/CardTypeRepository.js"></script>
 	<script src="js/repositories/UserRepository.js"></script>
 	<script src="js/repositories/CardTypesRepository.js"></script>
@@ -42,6 +44,7 @@
 	<script src="js/components/pages/open-packs/card-pack/CardPack.js"></script>
 	<script src="js/components/pages/open-packs/show-cards-modal/ShowCardsModal.js"></script>
 	<script src="js/components/card-component/Card.js"></script>
+	<script src="js/components/pages/card-collection/CardCollection.js"></script>
 
 	<script src="js/services/router/Router.js"></script>
 	<script src="js/main.js"></script>
