Started working on the "Create Arena Deck" user story

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" type="text/css" href="js/components/grid/grid.css">
 	<link rel="stylesheet" type="text/css" href="js/components/pages/card-types/card-types.css">
 	<link rel="stylesheet" type="text/css" href="js/components/pages/add-card-type/addcardtype.css">
+	<link rel="stylesheet" type="text/css" href="js/components/pages/create-arena-deck/arenadeck.css">
 	<link rel="stylesheet" type="text/css" href="js/components/pages/open-packs/OpenPacks.css">
 	<link rel="stylesheet" type="text/css" href="js/components/pages/open-packs/card-pack/CardPack.css">
 	<link rel="stylesheet" type="text/css" href="js/components/card-component/Card.css">
@@ -26,6 +27,7 @@
 	<div class="content-container">
 	</div>
 
+	<script src="js/repositories/ArenaRepository.js"></script>
 	<script src="js/repositories/CardCollectionRepository.js"></script>
 	<script src="js/repositories/CardTypeRepository.js"></script>
 	<script src="js/repositories/UserRepository.js"></script>
@@ -41,11 +43,9 @@
 	<script src="js/components/validations/CardValidations.js"></script>
 	<script src="js/components/validations/ValidationMessages.js"></script>
 
-	<script src="js/components/validations/CardValidations.js"></script>
-	<script src="js/components/validations/ValidationMessages.js"></script>
-
 	<script src="js/components/pages/dashboard/Dashboard.js"></script>
 	<script src="js/components/pages/add-card-type/AddCardType.js"></script>
+	<script src="js/components/pages/create-arena-deck/CreateArenaDeck.js"></script>
 	<script src="js/components/pages/card-types/CardTypes.js"></script>
 	<script src="js/components/pages/open-packs/OpenPacks.js"></script>
 	<script src="js/components/pages/open-packs/card-pack/CardPack.js"></script>
